[gd_scene load_steps=2 format=3 uid="uid://cwaygpee26s8r"]

[ext_resource type="Script" path="res://match_select.gd" id="1_b1amd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1amd")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="DeckSelect" type="OptionButton" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "Select Deck"
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/id = 1

[node name="CheckButton" type="CheckButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Mode"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.568627, 0.776471, 0, 1)
text = "START GAME"

[connection signal="item_selected" from="CenterContainer/VBoxContainer/DeckSelect" to="." method="on_deck_selection_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/CheckButton" to="." method="on_debug_state_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="start_game"]
